--- a/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
+++ b/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
@@ -1,5 +1,11 @@
 ﻿@inherits LayoutComponentBase
 
-<main>
-    @Body
-</main>
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider />
+
+<MudLayout>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
