--- a/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
+++ b/Solution/FastWorkspace.Client/Shared/Layouts/MainLayout.razor
@@ -4,8 +4,6 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<MudLayout>
-    <MudMainContent>
-        @Body
-    </MudMainContent>
-</MudLayout>
+<main class="ma-16">
+    @Body
+</main>
