draft configuration page

--- a/Solution/FastWorkspace.Client/Main.razor
+++ b/Solution/FastWorkspace.Client/Main.razor
@@ -3,6 +3,6 @@
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
     </Found>
     <NotFound>
-        <Redirect Url="@Routes.HomePage" />
+        <Redirect Url="@Routes.Index" />
     </NotFound>
 </Router>
