--- a/Solution/FastWorkspace.Client/Pages/Index.razor
+++ b/Solution/FastWorkspace.Client/Pages/Index.razor
@@ -2,11 +2,15 @@
 
 @attribute [Route(Routes.Index)]
 
-@if (AppConfiguration.IsAppReady())
+@if (AppReady)
 {
     <Redirect Url="@Routes.HomePage" />
 }
 else
 {
     <Redirect Url="@Routes.ConfigurationPage" />
+}
+
+@code {
+    private bool AppReady => AppConfiguration.GetFileStorageDirectoryPath() != null;
 }
