--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -13,8 +13,8 @@
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Layouts
 
-@using Domain
+@using FastWorkspace.Domain.Enums
 @using FastWorkspace.Domain.Navigation
 @using FastWorkspace.Domain.Services
 
-@using MudBlazor
+@using Microsoft.Fast.Components.FluentUI
