Revert "broken draft"
This reverts commit e28a07ac189aabcaaf7f8135700c2c734d1ab44e.

--- a/Solution/FastWorkspace.Client/Pages/Index.razor
+++ b/Solution/FastWorkspace.Client/Pages/Index.razor
@@ -2,15 +2,11 @@
 
 @attribute [Route(Routes.Index)]
 
-@if (AppReady)
+@if (AppConfiguration.IsAppReady())
 {
     <Redirect Url="@Routes.HomePage" />
 }
 else
 {
     <Redirect Url="@Routes.ConfigurationPage" />
-}
-
-@code {
-    private bool AppReady => AppConfiguration.GetFileStorageDirectoryPath() != null;
 }
