--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -13,8 +13,8 @@
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Layouts
 
-@using FastWorkspace.Domain.Enums
+@using Domain
 @using FastWorkspace.Domain.Navigation
 @using FastWorkspace.Domain.Services
 
-@using Microsoft.Fast.Components.FluentUI
+@using MudBlazor
