--- a/Solution/FastWorkspace.Client/_Imports.razor
+++ b/Solution/FastWorkspace.Client/_Imports.razor
@@ -1,20 +1,15 @@
-﻿@using System.Net.Http
+﻿@using Microsoft.AspNetCore.Components.Routing
 
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
-@using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-
-@using Microsoft.JSInterop
+@using MudBlazor
 
 @using FastWorkspace.Client
-
 @using FastWorkspace.Client.Shared
 @using FastWorkspace.Client.Shared.Atoms
 @using FastWorkspace.Client.Shared.Layouts
 
-@using Domain
+@using FastWorkspace.Domain
+@using FastWorkspace.Domain.Common
+@using FastWorkspace.Domain.Enums
+@using FastWorkspace.Domain.Jobs
 @using FastWorkspace.Domain.Navigation
 @using FastWorkspace.Domain.Services
-
-@using MudBlazor
