--- a/Solution/FastWorkspace.Client/wwwroot/css/app.css
+++ b/Solution/FastWorkspace.Client/wwwroot/css/app.css
@@ -1,4 +1,9 @@
-﻿#blazor-error-ui {
+﻿body {
+    min-height: 100vh;
+}
+
+
+#blazor-error-ui {
     background: lightyellow;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
@@ -25,4 +30,8 @@
 
 .blazor-error-boundary::after {
     content: "An error has occurred."
+}
+
+.bold-text {
+    font-weight: bold !important;
 }
