--- a/Solution/FastWorkspace.Client/Pages/HomePage.razor
+++ b/Solution/FastWorkspace.Client/Pages/HomePage.razor
@@ -6,6 +6,8 @@
 @attribute [Route(Routes.HomePage)]
 
 <main class="ma-16">
+    <MudLink Href="@Routes.ConfigurationPage">Configuration</MudLink>
+
     <MudText Typo="Typo.h3" Align="Align.Center" Class="mb-8">Fast Workspace</MudText>
 
     <div>
