--- a/Solution/FastWorkspace.Client/wwwroot/css/app.css
+++ b/Solution/FastWorkspace.Client/wwwroot/css/app.css
@@ -1,9 +1,4 @@
-﻿body {
-    min-height: 100vh;
-}
-
-
-#blazor-error-ui {
+﻿#blazor-error-ui {
     background: lightyellow;
     bottom: 0;
     box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
